-- Migration: Add Payment Gateway Integration Tables (Phase 9)
-- Run this script if migrations are not working or to manually create the tables

-- Step 1: Add Category and PaymentId columns to Transactions table
ALTER TABLE "Transactions"
    ADD COLUMN IF NOT EXISTS "Category" integer NOT NULL DEFAULT 0,
    ADD COLUMN IF NOT EXISTS "PaymentId" integer NULL;

-- Step 2: Create Payments table
CREATE TABLE IF NOT EXISTS "Payments" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    "UserId" integer NOT NULL,
    "AccountId" integer NOT NULL,
    "PaymentGateway" character varying(50) NOT NULL,
    "GatewayPaymentId" character varying(100) NULL,
    "RequestId" character varying(100) NOT NULL,
    "Amount" numeric(18,4) NOT NULL,
    "Currency" character varying(3) NOT NULL,
    "Status" integer NOT NULL DEFAULT 0,
    "PaymentUrl" character varying(500) NULL,
    "TransactionId" integer NULL,
    "GatewayResponse" text NULL,
    "WebhookReceived" boolean NOT NULL DEFAULT false,
    "WebhookData" text NULL,
    CONSTRAINT "PK_Payments" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Payments_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE RESTRICT,
    CONSTRAINT "FK_Payments_Accounts_AccountId" FOREIGN KEY ("AccountId") REFERENCES "Accounts" ("Id") ON DELETE RESTRICT,
    CONSTRAINT "FK_Payments_Transactions_TransactionId" FOREIGN KEY ("TransactionId") REFERENCES "Transactions" ("Id") ON DELETE SET NULL
);

-- Step 3: Create PaymentWebhookLogs table
CREATE TABLE IF NOT EXISTS "PaymentWebhookLogs" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    "PaymentId" integer NOT NULL,
    "WebhookPayload" text NOT NULL,
    "Signature" character varying(500) NULL,
    "SignatureValid" boolean NOT NULL DEFAULT false,
    "Processed" boolean NOT NULL DEFAULT false,
    "ProcessedAt" timestamp with time zone NULL,
    "ErrorMessage" character varying(1000) NULL,
    CONSTRAINT "PK_PaymentWebhookLogs" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_PaymentWebhookLogs_Payments_PaymentId" FOREIGN KEY ("PaymentId") REFERENCES "Payments" ("Id") ON DELETE CASCADE
);

-- Step 4: Create indexes for Payments table
CREATE UNIQUE INDEX IF NOT EXISTS "IX_Payments_RequestId" ON "Payments" ("RequestId");
CREATE INDEX IF NOT EXISTS "IX_Payments_GatewayPaymentId" ON "Payments" ("GatewayPaymentId");
CREATE INDEX IF NOT EXISTS "IX_Payments_UserId_Status" ON "Payments" ("UserId", "Status");
CREATE INDEX IF NOT EXISTS "IX_Payments_AccountId_Status" ON "Payments" ("AccountId", "Status");
CREATE INDEX IF NOT EXISTS "IX_Payments_CreatedAt" ON "Payments" ("CreatedAt");
CREATE INDEX IF NOT EXISTS "IX_Payments_Status" ON "Payments" ("Status");

-- Step 5: Create indexes for PaymentWebhookLogs table
CREATE INDEX IF NOT EXISTS "IX_PaymentWebhookLogs_PaymentId" ON "PaymentWebhookLogs" ("PaymentId");
CREATE INDEX IF NOT EXISTS "IX_PaymentWebhookLogs_CreatedAt" ON "PaymentWebhookLogs" ("CreatedAt");
CREATE INDEX IF NOT EXISTS "IX_PaymentWebhookLogs_PaymentId_Processed" ON "PaymentWebhookLogs" ("PaymentId", "Processed");

-- Step 6: Create indexes for Transactions table (optimization)
CREATE INDEX IF NOT EXISTS "IX_Transactions_FromAccountId_CreatedAt" ON "Transactions" ("FromAccountId", "CreatedAt");
CREATE INDEX IF NOT EXISTS "IX_Transactions_Status_CreatedAt" ON "Transactions" ("Status", "CreatedAt");
CREATE INDEX IF NOT EXISTS "IX_Transactions_Category" ON "Transactions" ("Category");

-- Step 7: Add foreign key constraint for Transaction.PaymentId
ALTER TABLE "Transactions"
    ADD CONSTRAINT IF NOT EXISTS "FK_Transactions_Payments_PaymentId" 
    FOREIGN KEY ("PaymentId") REFERENCES "Payments" ("Id") ON DELETE SET NULL;
