-- Complete Database Setup Script
-- This script creates the entire database schema from scratch including advanced features
-- Run this once to set up everything

-- ============================================
-- PART 1: BASE SCHEMA (from EF Core migrations)
-- ============================================

-- Create AuditLogs table
CREATE TABLE IF NOT EXISTS "AuditLogs" (
    "Id" uuid NOT NULL,
    "UserId" integer NULL,
    "EntityType" character varying(256) NOT NULL,
    "EntityId" character varying(50) NOT NULL,
    "Action" character varying(50) NOT NULL,
    "Changes" text NOT NULL,
    "Timestamp" timestamp with time zone NOT NULL,
    CONSTRAINT "PK_AuditLogs" PRIMARY KEY ("Id")
);

-- Create Users table
CREATE TABLE IF NOT EXISTS "Users" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "FirstName" character varying(100) NOT NULL,
    "LastName" character varying(100) NOT NULL,
    "Email" character varying(256) NOT NULL,
    "Phone" text NULL,
    "PasswordHash" text NOT NULL,
    "Role" integer NOT NULL,
    "KycStatus" integer NOT NULL,
    "KybStatus" integer NOT NULL,
    "ApprovalStatus" integer NOT NULL,
    "UpdatedBy" integer NULL,
    "IsDeleted" boolean NOT NULL DEFAULT false,
    "DeletedAt" timestamp with time zone NULL,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    CONSTRAINT "PK_Users" PRIMARY KEY ("Id")
);

-- Create Accounts table
CREATE TABLE IF NOT EXISTS "Accounts" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "UserId" integer NOT NULL,
    "Balance" numeric(18,4) NOT NULL,
    "Currency" character varying(3) NOT NULL,
    "Status" integer NOT NULL,
    "AccountNumber" character varying(34) NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    CONSTRAINT "PK_Accounts" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Accounts_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE RESTRICT
);

-- Create KYC Document tables
CREATE TABLE IF NOT EXISTS "IcDocuments" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "UserId" integer NOT NULL,
    "IdentityCardNumber" character varying(50) NOT NULL,
    "FullName" character varying(200) NOT NULL,
    "MotherFullName" character varying(200) NOT NULL,
    "BirthDate" timestamp with time zone NOT NULL,
    "BirthLocation" character varying(200) NOT NULL,
    "Status" integer NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    CONSTRAINT "PK_IcDocuments" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_IcDocuments_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE RESTRICT
);

CREATE TABLE IF NOT EXISTS "LivingIdentityDocuments" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "UserId" integer NOT NULL,
    "SerialNumber" character varying(50) NOT NULL,
    "FullFamilyName" character varying(200) NOT NULL,
    "LivingLocation" character varying(200) NOT NULL,
    "FormNumber" character varying(50) NOT NULL,
    "Status" integer NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    CONSTRAINT "PK_LivingIdentityDocuments" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_LivingIdentityDocuments_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE RESTRICT
);

CREATE TABLE IF NOT EXISTS "PassportDocuments" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "UserId" integer NOT NULL,
    "PassportNumber" character varying(50) NOT NULL,
    "FullName" character varying(200) NOT NULL,
    "ShortName" text NULL,
    "Nationality" character varying(100) NOT NULL,
    "BirthDate" timestamp with time zone NOT NULL,
    "MotherFullName" character varying(200) NOT NULL,
    "ExpiryDate" timestamp with time zone NOT NULL,
    "Status" integer NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    CONSTRAINT "PK_PassportDocuments" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_PassportDocuments_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE RESTRICT
);

-- Create PayrollJobs table
CREATE TABLE IF NOT EXISTS "PayrollJobs" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "EmployeeUserId" integer NOT NULL,
    "EmployerId" character varying(100) NULL,
    "Amount" numeric(18,4) NOT NULL,
    "Currency" character varying(3) NOT NULL,
    "Schedule" character varying(50) NULL,
    "NextRunAt" timestamp with time zone NULL,
    "Status" integer NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    CONSTRAINT "PK_PayrollJobs" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_PayrollJobs_Users_EmployeeUserId" FOREIGN KEY ("EmployeeUserId") REFERENCES "Users" ("Id") ON DELETE RESTRICT
);

-- Create RefreshTokens table
CREATE TABLE IF NOT EXISTS "RefreshTokens" (
    "Id" uuid NOT NULL,
    "TokenHash" character varying(64) NOT NULL,
    "UserId" integer NOT NULL,
    "ExpiresAt" timestamp with time zone NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL,
    "RevokedAt" timestamp with time zone NULL,
    "DeviceClientId" character varying(256) NULL,
    "IpAddress" character varying(45) NULL,
    "ReplacedByTokenHash" character varying(64) NULL,
    CONSTRAINT "PK_RefreshTokens" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_RefreshTokens_Users_UserId" FOREIGN KEY ("UserId") REFERENCES "Users" ("Id") ON DELETE CASCADE
);

-- Create Cards table
CREATE TABLE IF NOT EXISTS "Cards" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "AccountId" integer NOT NULL,
    "Number" character varying(19) NOT NULL,
    "Type" integer NOT NULL,
    "ExpiryDate" timestamp with time zone NOT NULL,
    "ScHashed" text NOT NULL,
    "IsActive" boolean NOT NULL,
    "IsExpired" boolean NOT NULL,
    "IsEmployeeCard" boolean NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    CONSTRAINT "PK_Cards" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Cards_Accounts_AccountId" FOREIGN KEY ("AccountId") REFERENCES "Accounts" ("Id") ON DELETE RESTRICT
);

-- Create Transactions table (BASE - will be enhanced in Part 2)
CREATE TABLE IF NOT EXISTS "Transactions" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "FromAccountId" integer NOT NULL,
    "ToAccountNumber" character varying(34) NOT NULL,
    "Amount" numeric(18,4) NOT NULL,
    "TransactionType" integer NOT NULL,
    "Status" integer NOT NULL,
    "Purpose" text NULL,
    "IdempotencyKey" character varying(64) NULL,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    CONSTRAINT "PK_Transactions" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Transactions_Accounts_FromAccountId" FOREIGN KEY ("FromAccountId") REFERENCES "Accounts" ("Id") ON DELETE RESTRICT
);

-- Create PhoneVerificationCodes table
CREATE TABLE IF NOT EXISTS "PhoneVerificationCodes" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "Phone" character varying(20) NOT NULL,
    "Code" character varying(10) NOT NULL,
    "ExpiresAt" timestamp with time zone NOT NULL,
    "Attempts" integer NOT NULL DEFAULT 0,
    "IsUsed" boolean NOT NULL DEFAULT false,
    "CreatedAt" timestamp with time zone NOT NULL,
    CONSTRAINT "PK_PhoneVerificationCodes" PRIMARY KEY ("Id")
);

-- Create base indexes
CREATE UNIQUE INDEX IF NOT EXISTS "IX_Accounts_AccountNumber" ON "Accounts" ("AccountNumber");
CREATE UNIQUE INDEX IF NOT EXISTS "IX_Accounts_UserId" ON "Accounts" ("UserId");
CREATE INDEX IF NOT EXISTS "IX_Cards_AccountId" ON "Cards" ("AccountId");
CREATE UNIQUE INDEX IF NOT EXISTS "IX_Cards_Number" ON "Cards" ("Number");
CREATE INDEX IF NOT EXISTS "IX_IcDocuments_UserId" ON "IcDocuments" ("UserId");
CREATE INDEX IF NOT EXISTS "IX_LivingIdentityDocuments_UserId" ON "LivingIdentityDocuments" ("UserId");
CREATE INDEX IF NOT EXISTS "IX_PassportDocuments_UserId" ON "PassportDocuments" ("UserId");
CREATE INDEX IF NOT EXISTS "IX_PayrollJobs_EmployeeUserId" ON "PayrollJobs" ("EmployeeUserId");
CREATE UNIQUE INDEX IF NOT EXISTS "IX_RefreshTokens_TokenHash" ON "RefreshTokens" ("TokenHash");
CREATE INDEX IF NOT EXISTS "IX_RefreshTokens_UserId" ON "RefreshTokens" ("UserId");
CREATE UNIQUE INDEX IF NOT EXISTS "IX_Users_Email" ON "Users" ("Email") WHERE "IsDeleted" = false;
CREATE UNIQUE INDEX IF NOT EXISTS "IX_Transactions_FromAccountId_IdempotencyKey" 
    ON "Transactions" ("FromAccountId", "IdempotencyKey") 
    WHERE "IdempotencyKey" IS NOT NULL AND "IdempotencyKey" != '';

-- ============================================
-- PART 2: ADVANCED FEATURES (Phase 7)
-- ============================================

-- Add new columns to Transactions table
ALTER TABLE "Transactions"
    ADD COLUMN IF NOT EXISTS "FailureReason" integer NULL,
    ADD COLUMN IF NOT EXISTS "RetryCount" integer NOT NULL DEFAULT 0,
    ADD COLUMN IF NOT EXISTS "RiskScore" integer NULL,
    ADD COLUMN IF NOT EXISTS "RiskLevel" integer NULL,
    ADD COLUMN IF NOT EXISTS "StatusChangedAt" timestamp with time zone NULL;

-- Update existing transactions to have StatusChangedAt = CreatedAt
UPDATE "Transactions"
SET "StatusChangedAt" = "CreatedAt"
WHERE "StatusChangedAt" IS NULL;

-- Create indexes for advanced features
CREATE INDEX IF NOT EXISTS "IX_Transactions_Status_StatusChangedAt" ON "Transactions" ("Status", "StatusChangedAt");
CREATE INDEX IF NOT EXISTS "IX_Transactions_RiskLevel_Status" ON "Transactions" ("RiskLevel", "Status");

-- Create MerchantAccounts table
CREATE TABLE IF NOT EXISTS "MerchantAccounts" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    "AccountId" integer NOT NULL,
    "MerchantId" character varying(50) NOT NULL,
    "MerchantName" character varying(200) NOT NULL,
    "QrCodeData" character varying(500) NULL,
    "NfcUrl" character varying(500) NULL,
    "IsActive" boolean NOT NULL DEFAULT true,
    CONSTRAINT "PK_MerchantAccounts" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_MerchantAccounts_Accounts_AccountId" FOREIGN KEY ("AccountId") REFERENCES "Accounts" ("Id") ON DELETE RESTRICT
);

CREATE UNIQUE INDEX IF NOT EXISTS "IX_MerchantAccounts_MerchantId" ON "MerchantAccounts" ("MerchantId");
CREATE INDEX IF NOT EXISTS "IX_MerchantAccounts_AccountId" ON "MerchantAccounts" ("AccountId");

-- Create FraudDetectionRules table
CREATE TABLE IF NOT EXISTS "FraudDetectionRules" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    "RuleName" character varying(100) NOT NULL,
    "RuleType" character varying(50) NOT NULL,
    "ThresholdValue" numeric(18,4) NULL,
    "ThresholdCount" integer NULL,
    "TimeWindow" interval NULL,
    "IsActive" boolean NOT NULL DEFAULT true,
    CONSTRAINT "PK_FraudDetectionRules" PRIMARY KEY ("Id")
);

CREATE INDEX IF NOT EXISTS "IX_FraudDetectionRules_RuleType" ON "FraudDetectionRules" ("RuleType");
CREATE INDEX IF NOT EXISTS "IX_FraudDetectionRules_IsActive" ON "FraudDetectionRules" ("IsActive");

-- Create TransactionStatusHistory table
CREATE TABLE IF NOT EXISTS "TransactionStatusHistory" (
    "Id" integer NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    "CreatedAt" timestamp with time zone NOT NULL,
    "UpdatedAt" timestamp with time zone NULL,
    "TransactionId" integer NOT NULL,
    "OldStatus" integer NOT NULL,
    "NewStatus" integer NOT NULL,
    "ChangedAt" timestamp with time zone NOT NULL,
    "ChangedBy" integer NULL,
    "Reason" character varying(500) NULL,
    CONSTRAINT "PK_TransactionStatusHistory" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_TransactionStatusHistory_Transactions_TransactionId" FOREIGN KEY ("TransactionId") REFERENCES "Transactions" ("Id") ON DELETE RESTRICT
);

CREATE INDEX IF NOT EXISTS "IX_TransactionStatusHistory_TransactionId" ON "TransactionStatusHistory" ("TransactionId");
CREATE INDEX IF NOT EXISTS "IX_TransactionStatusHistory_ChangedAt" ON "TransactionStatusHistory" ("ChangedAt");

-- ============================================
-- COMPLETE!
-- ============================================
